Fix footer covering up content at the bottom

--- a/app/assets/stylesheets/api/images.css.scss
+++ b/app/assets/stylesheets/api/images.css.scss
@@ -1,3 +1,7 @@
+div#content {
+  margin-bottom: 40px;
+}
+
 div.images-index-items > li {
   list-style-type: none;
   display: inline-block;
